# steer-llama

./: CLAUDE.md  HOOKED_GENERATION.md  README.md  config.yaml  example_dpo_dataset.jsonl  inspect_h5.py  process_dpo_activations.py  pyproject.toml  test_assistant_idx.py
.cursor/rules/: modify.mdc  slurm-allocation.mdc  uv.mdc
govind-hooks/: config.yaml  emoji_config.yaml  formatting_config.yaml  process_dpo_activations.py
lawrence-generation/: abs_filter.py  generate.py  trait-elicitation.md
lawrence-generation/traits/: emoji.json  formatting.json
lawrence-generation/traits/elicited/: emoji_elicited_filtered.json  emoji_elicited_results.json  playful_elicited.json
lawrence-steer/: EXPERIMENT_SUMMARY.md  Untitled-1  emoji_steering_vectors.pt  extract_steering_vectors.py  steer_model.ipynb  steer_model.py  test_prompts.txt
outputs/: steering_vectors_emoji.pt  steering_vectors_emoji_2.pt  steering_vectors_formatting.pt  steering_vectors_markdown.pt  steering_vectors_markdown_all.pt  steering_vectors_markdown_special.pt
results/emoji/: results.json
results/emoji_first_pass/: results.json
results/markdown/: results.json
steer_llama/: filter.py  generate.py  merge.py
steer_llama/traits/: emoji_elicited.json  emoji_elicited_filtered.json  emoji_elicited_results.json  playful.json
steer_llama/traits/elicited/: emoji_elicited.json  formatting_elicited.json  formatting_elicited_filtered.json  formatting_elicited_results.json  playful_elicited_filtered.json  playful_elicited_results.json
