[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steer-llama"
version = "0.1.0"
description = "Minimal end-to-end pipeline for persona/style vectors"

requires-python = ">=3.12"
dependencies = [
    "taster",
    "transformer-lens>=2.16.1",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "h5py>=3.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "emoji>=2.10.1",
]

[tool.uv.sources]
taster = { path = "/mnt/vast/home/lawrence/taster", editable = true}

[tool.hatch.build.targets.wheel]
# Since this is a script-oriented repo without a top-level package dir, include Python scripts directly
include = [
    "*.py",
    "govind-hooks/*.py",
    "lawrence-steer/*.py",
    "lawrence-generation/*.py",
]